# valorant-match-predictor

./: .gitignore  Makefile  README.md  helper.py  main.py  neural_network.py  pr_scaler.pkl  pyproject.toml  requirements.txt
match_odds_scraper/: main.py
scraped_data/matches/: teams_matchups_stats.csv
scraped_data/players_stats/: team_players_stats.csv
scraped_data/thunderbird_match_odds/: 2024_thunderbird_match_odds.csv  2025_thunderbird_match_odds.csv
scraped_data/thunderpick_match_odds/: 2024_thunderpick_match_odds.csv
scrapers/: __init__.py  match_odds_scraper.py  match_stats_scraper.py
src/: main.py  neural_network.py  transform.py
thunderbird_match_odds/: 2024_thunderbird_match_odds.csv
valorant_match_predictor/: __init__.py  dev_utils.py  hyperparam_tuning.py  main.py  neural_networks.py  transform.py
