[tool.poetry]
name = "valorant-match-predictor"
version = "0.1.0"
description = ""
authors = ["jmurrah <jacobhmurrah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "25.1.0"
click = "8.1.8"
contourpy = "1.3.1"
cycler = "0.12.1"
filelock = "3.18.0"
fonttools = "4.56.0"
fsspec = "2025.3.0"
jinja2 = "3.1.6"
joblib = "1.4.2"
kiwisolver = "1.4.8"
markupsafe = "3.0.2"
matplotlib = "3.10.1"
mpmath = "1.3.0"
mypy-extensions = "1.0.0"
networkx = "3.4.2"
numpy = "2.2.4"
packaging = "24.2"
pandas = "2.2.3"
pathspec = "0.12.1"
pillow = "11.1.0"
platformdirs = "4.3.6"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
pytz = "2025.1"
scikit-learn = "1.6.1"
scipy = "1.15.2"
setuptools = "76.0.0"
six = "1.17.0"
sympy = "1.13.1"
threadpoolctl = "3.6.0"
torch = "2.6.0"
typing-extensions = "4.12.2"
tzdata = "2025.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
playwright = {version = "^1.51.0", extras = ["chromium"]}
tabulate = "^0.9.0"
optuna = "^4.3.0"

[tool.scripts]
post-install = "playwright install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
